<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Auctor</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="ad_account_id" translatable="false">ca-app-pub-6696437403163667~6953226633</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6696437403163667/5982516625</string>
    <string name="interstitial_plot_gen" translatable="false">ca-app-pub-6696437403163667/3046586854</string>
    <string name="reward_ad_plot_gen" translatable="false">ca-app-pub-6696437403163667/2030936311</string>
    <string name="reward_ad_challenge" translatable="false">ca-app-pub-6696437403163667/6917012049</string>
    <string name="trigger_tab">Weekly writing Prompts</string>
    <string-array name="triggers_list" tools:ignore="InconsistentArrays">
        <item>He didn\’t tell anyone where he was going.</item>
        <item>He opened the letter and quickly threw it in the fire.</item>
        <item>The brick in the wall of the old house was loose.</item>
        <item>The normally busy street was empty.</item>
        <item>The key would no longer open the door.</item>
        <item>It was two in the morning as he lay there listening to the sounds.</item>
        <item>More people crammed into the stadium.</item>
        <item>Five old pennies in a velvet bag.</item>
        <item>He ran, faster than he ever believed possible.</item>
        <item>Those were screams, but certainly not humans</item>
        <item>She waited but nobody came.</item>
        <item>High up on top of a green mountain.</item>
        <item>It was the first time he holds a gun, but somehow it didn\'t feel strange.</item>,
        <item>His glare was harsh as he stared at the boy.</item>
        <item>The river was beginning to break it\'s banks.</item>
        <item>She wouldn\’t even have time to pack.</item>
        <item>The house looked different with new windows and doors.</item>
        <item>The man tried to blend into the darkness, but she could see him.</item>
        <item>That wasn\'t an animal, but a person either.</item>
        <item>I\'m sure what I saw. I just can’t explain it.</item>
        <item>Is not that I don\'t believe him. It just that I don\’t care.</item>
        <item>It was dead way before I arrive.</item>
        <item>Right now, I\'m more afraid of living than dying.</item>
        <item>That\'s not the deal we sign up for. But we had no way to go back.</item>
        <item>I never thought I would forgive</item>
        <item>I hear them downstairs…</item>
        <item>There is something sweet about knowing you\'re going to die…</item>
        <item>True friends don\'t leave you behind. I guess I wasn\'t a true friend after all.</item>
        <item>I didn\'t take a Sherlock Holmes to realise that the knife was gone.</item>
        <item>I don\'t believe in angels. Well, I didn\'t until then…</item>
        <item>I don\'t swear, I do never do. Not even then.</item>
        <item>He check around to make sure nobody was watching. Then he put the USB in the pocket…</item>
        <item>He looked at his rifle. It was long time since the last time…</item>
        <item>Worse than a sunken ship. Is to be the only survivor.</item>
        <item>I looked like a flu. We were sure it was a flu. The only problem was that I wasn\'t.</item>
        <item>We were at war, a war we will lose. But you know, we were taught to fight to fight just to stand our ground, victory was a detail.</item>
        <item>It was the worst financial crisis I ever saw. And I saw many.</item>
        <item>I would have shot him on the spot. Except I got no bullets.</item>
        <item>Wait. Is that a flashlight?</item>
        <item>I didn\'t choose this profession. The profession chose me.</item>
        <item>Being in Africa at 42 degrees, wasn\'t the problem. The guy chasing me, certainly was.</item>
        <item>Hired as a private investigator. My first big deal and it was a complete misunderstanding.</item>
        <item>I would have call the police, except that I was the police, and I have no clue what to do.</item>
        <item>The light was fading.</item>
        <item>We almost drowned but I didn\'t care.</item>
        <item>It was the first time I drove a truck, and I thought it would be also the last.</item>
        <item>The sheriff stare at me for a second. I knew he knew, but neither of us said anything.</item>
        <item>That day I missed her for first time.</item>
        <item>It wasn\'t a problem that she left with another women, but it has to be my sister?</item>
    </string-array>
    <string name="character_tab">Story Workshop</string>
    <string name="character_create">Create Character</string>
    <string name="character_update">Edit Character</string>
    <string name="writing_challenge_tab">Weekly writing Challenge</string>
    <string name="home_title">The only thing that one\n really knows about human nature\n is that it changes.\n      Oscar Wilde</string>
    <string name="home_tab">Home</string>
    <string name="home_header">Focus on writing…</string>
    <string name="home_desc">If you love to write, then you\'re in the right place.\nI made this app because I also love writing as well but I know the struggle with writer\'s block, being lost or just losing focus.\nActually, I did this app for me but I believe it can also help you.\nThere are three things at the moment that you may find interesting.\n\nWriting prompts, whenever you\'re lost or you don\'t know how to start or how to continue, check them out. \nA simple sentence that will let your imagination fly away. And don\'t worry I\'ll post new ones weekly.\n\nThe Hero Journey. If you didn\'t read it, go running to get it! That\'s Joseph Campbell legacy for writers. \nHowever if you did read it and you want a refreshment, or you just want to go to the meat, check out The Hero Journey section, it contains all you have to know for your hero and it\'s journey.
        \n\nLast but not least, check out the workshop. It contains what you need to track and develop your characters. Create a project, then add characters and don\t worry if you are a bit block. I got your back with the generator function, that will generate traits, desires and needs for you.\n\nHave a great writing!</string>
    <string name="projects_tab">Projects</string>
    <string name="projects_empty">Really no name for your project? Try again with something more creative</string>
    <string name="project_name">Project Name</string>
    <string name="project_genre">Genre</string>
    <string-array name="genres_array">
        <item>Tragedy</item>
        <item>Science fiction</item>
        <item>Fantasy</item>
        <item>Mythology</item>
        <item>Adventure</item>
        <item>Mystery</item>
        <item>Drama</item>
        <item>Romance</item>
        <item>Action / Adventure</item>
        <item>Satire</item>
        <item>Horror</item>
        <item>Tragic comedy</item>
        <item>Young adult fiction</item>
        <item>Dystopia</item>
        <item>Action thriller</item>
        <item>Comedy</item>
    </string-array>
    <string name="project_summary">Plot Summary</string>
    <string name="add_projects_btn">Add project</string>
    <string name="edit_projects_btn">Edit project</string>
    <string name="delete_project_btn">Are you sure you want to delete this project?</string>
    <string name="delete_project_btn_message">All characters associated to it will be deleted</string>
    <string name="projects_empty_text">Seems that you don\'t have any project yet.
    Please go ahead and create a new one to get started.</string>
    <string name="character_bio_title">Biography</string>
    <string name="character_list_tab">Characters</string>
    <string name="character_empty_text">Seems that you don\'t have any character yet.
    Please go ahead and create a new one to get started.</string>
    <string name="age_bio_1">is</string>
    <string name="age_bio_2">years old.</string>
    <string name="placebirth_bio">Born in</string>
    <string name="height_bio">Being</string>
    <string name="hair_bio_1">with</string>
    <string name="hair_bio_2">hair and</string>
    <string name="eyes_bio">eyes color</string>
    <string name="bodybuild_bio">One could say that looks rather</string>
    <string name="job_bio">Works as</string>
    <string name="nojob_bio">at the moment is</string>
    <string name="male_desire_bio">In his mind he wants </string>
    <string name="male_need_bio">But is that what he really wants? Or he actually needs</string>
    <string name="male_moment_bio">About his childhood we know that he</string>
    <string name="male_phrase_bio">A phrase that people will commonly associate with him is</string>
    <string name="male_trait_bio">Also his friends says that he is</string>
    <string name="notes_bio">Notes</string>
    <string name="female_desire_bio">In her mind she wants </string>
    <string name="female_need_bio">But is that what she really wants? Or she actually needs</string>
    <string name="female_moment_bio">About her childhood we know that she</string>
    <string name="female_phrase_bio">A phrase that people will commonly associate with her is</string>
    <string name="female_trait_bio">Also her friends says that she is</string>
    <string name="female_notes_bio">Notes</string>
    <string name="binary_desire_bio">In their mind they want </string>
    <string name="binary_need_bio">But is that what they really want? Or they actually need</string>
    <string name="binary_moment_bio">About their childhood we know that they</string>
    <string name="binary_phrase_bio">A phrase that people will commonly associate with them is</string>
    <string name="binary_trait_bio">Also their friends says that they are</string>
    <string name="challenge_1_bio_title">The elevator challenge:</string>
    <string name="challenge_1_bio_desc_1">What will be his first reaction if he gets stuck in a elevator?</string>
    <string name="challenge_1_bio_desc_2">Will your character wait to be rescued?</string>
    <string name="challenge_1_bio_desc_3">If the person next to your character has a panic attack. What will happen?</string>
    <string name="challenge_1_bio_desc_4">Lastly in the eventuality that just one can escape and the other should wait, what will your character do?</string>
    <string name="challenge_2_bio_title">The Lie Your Character Believes</string>
    <string name="challenge_2_bio_subtitle">is the foundation for his character arc. This is what\’s wrong in his world. Once you know what\’s wrong, you then get to set about figuring out how to make it right. </string>
    <string name="challenge_2_bio_desc_1">What misconception does your protagonist have about himself of the world?</string>
    <string name="hero_journey_tab">The hero journey</string>
    <string name="submit_welcome">Welcome</string>
    <string name="submit_title">Title</string>
    <string name="write_here_hint">Write your story here</string>
    <string name="submit_prompt">Send your weekly challenge now!</string>
    <string name="submit_button">Submit</string>
    <string name="please_select_the_one_option">Please select the one option</string>
    <string name="select_from_photo_gallery">Select from Photo Gallery</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="cancel">Cancel</string>
    <string name="promptSubmitTeaser">Send your prompt now!</string>
    <string name="promptHint">Write your prompt here!</string>
    <string name="promptSubmit">Submit</string>
</resources>