<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home_tab" />

        <item
            android:id="@+id/nav_char"
            android:icon="@drawable/writer_icon"
            android:title="@string/character_tab" />

        <item
            android:id="@+id/nav_trigger"
            android:icon="@drawable/ic_trigger_black"
            android:title="@string/trigger_tab" />

        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/ic_book_black"
            android:title="@string/hero_journey_tab" />




    </group>



</menu>
