<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_send_magic_link"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_back"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="@dimen/dp_16"
            android:text="@string/please_select_the_one_option"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/content_lighter" />


        <!--        <RelativeLayout
                    android:id="@+id/take_photo_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_16">

                    <TextView
                        android:id="@+id/tv_take_photo"
                        style="@style/text_view_black_14"
                        android:layout_width="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginStart="@dimen/dp_16"
                        android:text="@string/take_a_photo"
                        android:textColor="@color/blue" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/divider_color" />-->

        <RelativeLayout
            android:id="@+id/select_from_gallery_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16">

            <TextView
                android:id="@+id/tv_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/select_from_photo_gallery"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>

        <View
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/content_lighter"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/remove_photo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_remove_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/remove_photo"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/dialog_back"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>