<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".Fragment.SubmitStoryFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnTriggerSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/promptSubmitTeaser"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etTriggerStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/bg_rectangle_edittext"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/promptHint"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="10"
            android:padding="8dp"
            android:textColorHint="@color/content_lighter"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="Prompt"
            app:met_textColor="?android:attr/textColorSecondary" />


    </LinearLayout>

    <Button
        android:id="@+id/btnTriggerSubmit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="?colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/promptSubmit"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>